[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=77.0.3']

[project]
name = 'deepcell-auth'
description = 'Python package for managing access to deepcell assets'
readme = 'README.md'
requires-python = '>=3.10'
dynamic = ['version']
keywords = [
    "deepcell",
    "data portal",
    "authentication",
]
license-files = ["LICENSE.md"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Academic Research',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
]
dependencies = [
    "requests",
    "tqdm",
]

[[project.maintainers]]
name = 'Van Valen Lab'
email = 'vanvalenlab@gmail.com'

[project.urls]
Homepage = 'https://users.deepcell.org'
"Bug Tracker" = 'https://github.com/vanvalenlab/deepcell-auth/issues'
"Source Code" = 'https://github.com/vanvalenlab/deepcell-auth'

[tool.setuptools]
zip-safe = false
include-package-data = false
packages = [
    'deepcell_auth',
]
platforms = [
    'Linux',
    'Mac OSX',
    'Windows',
    'Unix',
]

[tool.setuptools.dynamic.version]
attr = 'deepcell_auth.__version__'

[tool.setuptools.package-data]
deepcell_auth = ['tests/*.py']
